--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
         "postcss": "^8.2.1",
         "postcss-import": "^12.0.1",
         "tailwindcss": "^2.0.2"
+    },
+    "dependencies": {
+        "vue": "^3.2.21",
+        "vue-loader": "^16.8.3",
+        "vue-router": "^4.0.12"
     }
 }
